<resources>
    <string name="app_name">Digital Daybook</string>
    <string name="daybook_name">Daybook Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="number_of_people">Number of People</string>
    <string name="next">Next</string>
    <string name="not_registered">Not registered!</string>
    <string name="register">Register</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
</resources>
